--- a/css/main.css
+++ b/css/main.css
@@ -1,219 +1,229 @@
 #Contact {
-  font-size: 1000;
+  font-size: 1000px;
   font-style :normal;
   font-weight: bold;
   font-family:'Nunito', sans-serif;
-    color : #1D1818;
-
+  color : #1D1818;
 }
-
 #box{
   width: 100%;
   padding: 0;
 }
 
 h1 {
-	text-align center
-  color: #1D1818
+  text-align: center;
+  color: #1D1818;
 
 }
 h2 {
-  font-size: 1000;
+  font-size: 1000px;
   font-style :normal;
   font-weight: bold;
   font-family:'Nunito', sans-serif;
-    color : #1D1818;
+  color : #1D1818;
 }
 
+.style
+{
+
+}
 .subject {
-	border: 1px dotted #ccc;
-	padding: 1rem;
-	margin-bottom: 10rem;
-	flex-flow: row wrap;
-	justify-content: flex-end;
+  border: 1px dotted #ccc;
+  padding: 1rem;
+  margin-bottom: 10rem;
+  flex-flow: row wrap;
+  justify-content: flex-end;
 }
 .Head {
-  font-size: 1000;
+  font-size: 1000px;
   font-style :normal;
   font-weight: bold;
   font-family:'Nunito', sans-serif;
-    color : #1D1818;
+  color : #1D1818;
 }
 .summary{
-	line height
-  font-size: 1000;
+
+  font-size: 1000px;
   font-style: normal;
   font-weight: bold;
   font-family:'Nunito', sans-serif;
   color: #1D1818;
 }
 .sectionContent {
-  font-size: 1500;
+  font-size: 1500px;
   font-style :normal;
   font-weight: bold;
   font-family:'Nunito', sans-serif;
-    color : #FFF;
+  color : #FFF;
 }
 
-.p
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-weight: bold !important;
+  font-family:'Nunito', sans-serif;
 
 }
- * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-weight: bold !important;
-    font-family:'Nunito', sans-serif,!importante;
-
-    }
 
 html {
-    background-image: url(http://lorempixel.com/y/1000/1000);
-    background-attachment: fixed;
+  background-image: url(http://lorempixel.com/y/1000/1000);
+  background-attachment: fixed;
 
-    }
+}
 
 section {
-    height: 50vh;
-    background-image:
-        linear-gradient(
-            hsla(100,50%,50%,.4),
-            hsla(100,50%,50%,.6)
-          ),
-        url(http://lorempixel.com/i/1000/1000);
+  height: 50vh;
+  background-image:
+  linear-gradient(
+    hsla(100,50%,50%,.4),
+    hsla(100,50%,50%,.6)
+    ),
+    url(http://lorempixel.com/i/1000/1000);
     background-color: hsla(0,75%,50%,.4);
     transform-origin: 0% 0%;
     background-attachment: fixed;
-    font-size: 1000;
+    font-size: 1000px;
     font-style :normal;
     font-weight: bold;
     font-family:'Nunito', sans-serif;
+    color : #FFF;
+
+  }
+  section:nth-child(1) {
+    transform: skew(2deg,3deg);
+    background-image:
+    linear-gradient(
+      hsla(0,75%,50%,.4),
+      hsla(0,100%,50%,.6)
+      ),
+      url(http://lorempixel.com/i/1000/1000);
+      font-size: 1000px;
+      font-style :normal;
+      font-weight: bold;
+      font-family:'Nunito', sans-serif;
       color : #FFF;
-
     }
-section:nth-child(1) {
-    transform: skew(2,3deg);
-    background-image:
-        linear-gradient(
-            hsla(0,75%,50%,.4),
-            hsla(0,100%,50%,.6)
-          ),
-        url(http://lorempixel.com/i/1000/1000);
-        font-size: 1000;
-  			font-style :normal;
-  			font-weight: bold;
-        font-family:'Nunito', sans-serif;
-        color : #FFF;
-    }
-section:nth-child(2) {
-    transform-origin: 100% 0%;
-    transform: skew(3,-3deg);
-    background-color: hsla(110,75%,50%,.4);
-    background-image:
-        linear-gradient(
-            hsla(110,75%,50%,.4),
-            hsla(110,100%,50%,.6)
-          ),
+    section:nth-child(2) {
+      transform-origin: 100% 0%;
+      transform: skew(3deg,-3deg);
+      background-color: hsla(110,75%,50%,.4);
+      background-image:
+      linear-gradient(
+        hsla(110,75%,50%,.4),
+        hsla(110,100%,50%,.6)
+        ),
         url(http://lorempixel.com/s/1000/1000);
-        font-size: 1000;
-  			font-style :normal;
+        font-size: 1000px;
+        font-style :normal;
         font-family:'Nunito', sans-serif;
         font-weight: bold;
-  			color : #FFF;
+        color : #FFF;
 
-    }
-section:nth-child(3) {
-    transform: skew(2,3deg);
-    background-color: hsla(45,75%,50%,.4);
-    background-image:
+      }
+      section:nth-child(3) {
+        transform: skew(2deg,3deg);
+        background-color: hsla(45,75%,50%,.4);
+        background-image:
         linear-gradient(
-            hsla(45,75%,50%,.4),
-            hsla(45,100%,50%,.6)
+          hsla(45,75%,50%,.4),
+          hsla(45,100%,50%,.6)
           ),
-        url(http://lorempixel.com/a/1000/1000);
-        font-size: 1000;
-  			font-style :normal;
-        font-family:'Nunito', sans-serif;
-        font-weight: bold;
-  			color : #FFF;
+          url(http://lorempixel.com/a/1000/1000);
+          font-size: 1000px;
+          font-style :normal;
+          font-family:'Nunito', sans-serif;
+          font-weight: bold;
+          color : #FFF;
 
-    }
-section:nth-child(4) {
-    transform-origin: 100% 0%;
-    transform: skew(2,-3deg);
-    background-color: hsla(210,75%,50%,.4);
-    background-image:
-        linear-gradient(
+        }
+        section:nth-child(4) {
+          transform-origin: 100% 0%;
+          transform: skew(2deg,-3deg);
+          background-color: hsla(210,75%,50%,.4);
+          background-image:
+          linear-gradient(
             hsla(210,75%,50%,.4),
             hsla(210,100%,50%,.6)
-          ),
-        url(http://lorempixel.com/t/1000/1000);
-        font-size: 1000;
-  			font-style :normal;
-        font-family:'Nunito', sans-serif;
-  			font-weight: bold;
-        color : #FFF;
-    }
-    section:nth-child(5) {
-        transform-origin: 50% 0%;
-        transform: skew(2,3deg);
-        background-color: hsla(210,75%,50%,.4);
-        background-image:
-            linear-gradient(
-                hsla(70,50%,25%,.4),
-                hsla(70,50%,25%,.6)
-              ),
+            ),
             url(http://lorempixel.com/t/1000/1000);
-            font-size: 1000;
-      			font-style :normal;
+            font-size: 1000px;
+            font-style :normal;
             font-family:'Nunito', sans-serif;
-      			font-weight: bold;
+            font-weight: bold;
             color : #FFF;
-        }
+          }
+          section:nth-child(5) {
+            transform-origin: 50% 0%;
+            transform: skew(2deg,3deg);
+            background-color: hsla(210,75%,50%,.4);
+            background-image:
+            linear-gradient(
+              hsla(70,50%,25%,.4),
+              hsla(70,50%,25%,.6)
+              ),
+              url(http://lorempixel.com/t/1000/1000);
+              font-size: 1000px;
+              font-style :normal;
+              font-family:'Nunito', sans-serif;
+              font-weight: bold;
+              color : #FFF;
+            }
 
-  textarea, input, select{
-  	padding: .5em .6em;
-  	display: inline-block;
-  	border: 1px solid #ccc;
-  	box-shadow: inset 0 1px 3px #ddd;
-  	border-radius: 4px;
-  	vertical-align: middle;
-  	box-sizing: border-box;
-  	height: 5.25rem;
-  	font-size: 1.5rem;
-  	font-weight: 300;
-  	width: 50%;
-  	margin-bottom: .5rem;
-  }
+            textarea, input, select{
+              padding: .5em .6em;
+              display: inline-block;
+              border: 1px solid #ccc;
+              box-shadow: inset 0 1px 3px #ddd;
+              border-radius: 4px;
+              vertical-align: middle;
+              box-sizing: border-box;
+              height: 5.25rem;
+              font-size: 1.5rem;
+              font-weight: 300;
+              width: 50%;
+              margin-bottom: .5rem;
+            }
 
-  button{
-  	background-color: #0078e7;
-  	color: #fff;
-  	padding: .5em 1em;
-  	border: 0 rgba(0,0,0,0);
-  	border-radius: 2px;
-  	width: 50%;
-  	font-size: 2rem;
-  	font-weight: 300;
-  }
+            button{
+              background-color: #0078e7;
+              color: #fff;
+              padding: .5em 1em;
+              border: 0 rgba(0,0,0,0);
+              border-radius: 2px;
+              width: 50%;
+              font-size: 2rem;
+              font-weight: 300;
+            }
+            form{
+              border: 1px dotted #ccc;
+              padding: 1rem;
+              margin-bottom: 10rem;
+              flex-flow: row wrap;
+              justify-content: flex-end;
+            }
+            textarea, input, select{
+              padding: .5em .6em;
+              display: inline-block;
+              border: 1px solid #ccc;
+              box-shadow: inset 0 1px 3px #ddd;
+              border-radius: 4px;
+              vertical-align: middle;
+              box-sizing: border-box;
+              height: 5.25rem;
+              font-size: 1.5rem;
+              font-weight: 300;
+              width: 100%;
+              margin-bottom: .5rem;
+            }
 
-        }
-        select{
-        	height: 1.25rem;
-        	border: 1px solid #ccc;
-        	background-color: #fff;
-        	display: inline-block;
-        	vertical-align: middle;
-          font-family:'Nunito', sans-serif;
-          color : black;
-          width: 30%;
-        }
-
-        input:focus, textarea:focus, select:focus{
-        	border-color: #129FEA;
-        	outline: none;
-        	box-shadow: none;
-        }
-        input:focus, textarea:focus, keygen:focus, select:focus {
-        	outline-offset: -2px;
-        }
+            button{
+              background-color: #0078e7;
+              color: #fff;
+              padding: .5em 1em;
+              border: 0 rgba(0,0,0,0);
+              border-radius: 2px;
+              width: 100%;
+              font-size: 2rem;
+              font-weight: 300;
+            }
